# avs-mcs

./: .gitignore  Cargo.toml  Makefile  README.md  check-libudev.sh  check-opencv.sh
.fso-amem/: project.toml
.github/workflows/: rust-stable.yml
mcsapp-motion-tracker/: Cargo.toml
mcsapp-motion-tracker/src/: main.rs
mcsapp-motion-tracker/src/networks/: data_receiver.rs  device_receiver.rs  device_server.rs  mod.rs
mcslib-common/: Cargo.toml
mcslib-common/src/: config.rs  lib.rs  types.rs
mcslib-opencv/: Cargo.toml  build.rs  check-opencv.sh
mcslib-opencv/src/: lib.rs  motion_tracker_compute.rs
mcslib-protocol/: Cargo.toml
mcslib-tcp/: Cargo.toml
mcslib-udp/: Cargo.toml
