[package]
name = "mcsapp-motion-tracker"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.8.7"
mcslib-common = { path = "../mcslib-common"}
mcslib-opencv = { path = "../mcslib-opencv"}
mimalloc = { version = "0.1.11", default-features = false }
