[package]
name = "mcslib-common"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
chrono = { version = "*", features = ["serde"] }
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
