[package]
name = "mcslib-common"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
bytes = "0.5.3"
chrono = { version = "0.4.10", features = ["serde"] }
env_logger = "0.7.1"
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_info", "serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_repr = "0.1.5"
serialport = "3.3.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
