[package]
name = "mcslib-opencv"
version = "3.4.9"  # match the OpenCV version used
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
once_cell = "1.2.0"
opencv = {version = "0.29", default-features = false, features = ["opencv-34"]}
mcslib-common = { path = "../mcslib-common"}
